Fix padding on smaller screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -67,6 +67,13 @@ h3 {
   padding-right: 7rem;
 }
 
+@media (max-width: 1024px) {
+  .main-pane {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
 /* Product Cards Styles */
 .product-card {
   color: #ffffff !important;
